--- a/Client/src/app.css
+++ b/Client/src/app.css
@@ -29,12 +29,12 @@ header {
 
 .layout{
     display: flex;
-    height: 100vh;
+    height: 90vh;
 }
 
 .navbar {
     background-color: var(--color2);
-    width: 20%;
+    width: 10vw;
 }
 
 .container {
@@ -49,7 +49,7 @@ header {
 }
 
 .quarter {
-    width: 20%;
+    width: 10vw;
     background-color: var(--color2);
 }
 
@@ -73,7 +73,7 @@ ul {
 
 li {
     list-style-type: none;
-    padding: 10%;
+    padding: 20px;
 }
 
 li:hover {
